<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20dp"
  android:background="@drawable/custom_background"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  tools:context=".ScoreboardActivity">


  <TextView
    android:id="@+id/name"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:gravity="center"
    android:text="@string/username"
    android:textColor="@color/white"
    android:textSize="20sp"
    />
  <TextView
    android:id="@+id/score"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dp"
    android:padding="5dp"
    android:gravity="center"
    android:text="@string/your_score_is_0_out_of_10"
    android:textColor="@android:color/secondary_text_dark"
    android:textSize="15sp"
    />
  <TextView
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/result"
    android:textColor="@color/white"
    android:textSize="30sp"/>
  <Button
    android:id="@+id/finish_button"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="62dp"
    android:layout_marginTop="10dp"
    android:backgroundTint="@android:color/white"
    android:gravity="center"
    android:text="@string/finish"
    android:textColor="@color/teal_200"
    android:textSize="18sp"

    />


</LinearLayout>