<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  tools:context=".QuestionActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/custom_background"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/iv_image"
      android:layout_width="344dp"
      android:layout_height="325dp"
      android:layout_marginTop="16dp"
      android:layout_gravity="center"
      android:contentDescription="@string/quiz_image_Description"
      tools:src="@drawable/ic_flag_austria"/>

    <TextView
      android:id="@+id/tv_question"
      android:textStyle="bold"
      android:layout_width="540dp"
      android:layout_height="62dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:gravity="center"
      android:text="@string/sample_ques"
      android:textColor="#F9F9FB"
      android:textSize="22sp"/>
    <TextView
      android:id="@+id/first_option"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:padding="16dp"
      android:background="@drawable/default_option_border_bg"
      android:gravity="center"
      android:text="@string/sample_option"
      android:textColor="#7A8089"
      android:textSize="18sp"/>

    <TextView
      android:id="@+id/second_option"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:padding="16dp"
      android:background="@drawable/default_option_border_bg"
      android:gravity="center"
      android:text="@string/sample_option"
      android:textColor="#7A8089"
      android:textSize="18sp"/>

    <TextView
      android:id="@+id/third_option"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:padding="16dp"
      android:background="@drawable/default_option_border_bg"
      android:gravity="center"
      android:text="@string/sample_option"
      android:textColor="#7A8089"
      android:textSize="18sp"/>

    <TextView
      android:id="@+id/fourth_option"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:padding="16dp"
      android:background="@drawable/default_option_border_bg"
      android:gravity="center"
      android:text="@string/sample_option"
      android:textColor="#7A8089"
      android:textSize="18sp"/>

  </LinearLayout>

</ScrollView>
